force-app/main/default/objects/Genability_Provider_Account_Id__c/Genability_Provider_Account_Id__c.object-meta.xml
<CustomObject>
    <label>Genability Provider Account Id</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Genability Provider Account Id Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Genability Provider Account Ids</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>