force-app/main/default/objects/Genability_Provider_Account_Id__c/fields/First_Used_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Used_Date_Time__c</fullName>
    <label>First Used Date Time</label>
    <type>DateTime</type>
</CustomField>