force-app/main/default/objects/Genability_Provider_Account_Id__c/fields/Genability_Monthly_Limit__c.field-meta.xml
<CustomField>
    <fullName>Genability_Monthly_Limit__c</fullName>
    <label>Genability Monthly Limit</label>
    <referenceTo>Genability_Monthly_Limit__c</referenceTo>
    <relationshipLabel>Genability Provider Account Ids</relationshipLabel>
    <relationshipName>Genability_Provider_Account_Ids</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>