force-app/main/default/objects/Genability_Provider_Account_Id__c/fields/Last_Used_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_Date_Time__c</fullName>
    <label>Last Used Date Time</label>
    <type>DateTime</type>
</CustomField>