force-app/main/default/objects/Genability_Provider_Account_Id__c/fields/Last_Used_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Used_Timestamp__c</fullName>
    <label>Last Used Timestamp</label>
    <type>DateTime</type>
</CustomField>