force-app/main/default/objects/Genability_Provider_Account_Id__c/fields/Provider_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Provider_Account_Id__c</fullName>
    <formula>IF(Storage_Account__c = TRUE, &quot;STO-&quot;, &quot;STD-&quot;) &amp; Genability_Monthly_Limit__r.Year__c &amp; &quot;-&quot; &amp; Genability_Monthly_Limit__r.Month__c &amp; &quot;-&quot; &amp; Name</formula>
    <label>Provider Account Id</label>
    <type>Text</type>
</CustomField>