force-app/main/default/objects/Genability_Provider_Account_Id__c/fields/Storage_Account__c.field-meta.xml
<CustomField>
    <fullName>Storage_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if Genability Storage analysis is included with this account</inlineHelpText>
    <label>Storage Account</label>
    <type>Checkbox</type>
</CustomField>